--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-top-loading-bar": "^3.0.2",
     "wouter": "^3.3.5"
   },
   "devDependencies": {
